# mcp-digimon

./: Dockerfile  README.md  pyproject.toml  test_components.py  test_langchain.py
.agents/mcp-code/: SKILL.md
.agents/mcp-digi/: SKILL.md
src/: main.py
src/api/: digi_client.py
src/mcp_modules/: prompts.py  resources.py  tools.py
